load-spring-lake

--- a/scripts/adopt-a-drain/01.Dev.Process.ipynb
+++ b/scripts/adopt-a-drain/01.Dev.Process.ipynb
@@ -36,6 +36,17 @@
     " * Author: James Wilfong, wilfongjt@gmail.com\n",
     " ## Limits\n",
     " * This script doesn't interface with GitHub or Data.world. That happens in the maintainer/maintainer.Process.ipynb script.\n",
+    " * Process does not detect deleted records"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " # Project: Adopt a Drain Data Cleaning\n",
+    " * Author: James Wilfong, wilfongjt@gmail.com\n",
+    " ## Limits\n",
+    " * This script doesn't interface with GitHub or Data.world. That happens in the maintainer/maintainer.Process.ipynb script.\n",
     " ## Input\n",
     " * The input data is contained in the raw-data/adopt-a-drain folder of this repo. \n",
     " * The cleaning process is initiated by running this Jupyter Notebook.\n",
@@ -56,6 +67,57 @@
     " * Clean data is pushed to repo by the developer.\n",
     " * The developer creates a pull request for the maintainer.\n",
     " * The Maintainer will complete the task of loading data into production"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Goals\n",
+    "* merge drains from multiple communities across the watershed\n",
+    "* Resolve dataset conflicts i.e., drain identifyer uniqueness, data type, column names, and value range.\n",
+    "\n",
+    "# Acquire the Data\n",
+    "* get a csv or excel file from a community.\n",
+    "\n",
+    "# State of the Acquired-Dataset\n",
+    "    * assume the acquired-dataset is a subset of all drains in the universe ;)\n",
+    "    * assume record identifiers are not unique across communities \n",
+    "    * assume the acquired-dataset's column names are not the same across communities \n",
+    "    * assume the acquired-dataset's data types are not the same across communities\n",
+    "    * assume the acquired-dataset's data-values ranges are not the same across communities\n",
+    "\n",
+    "# Load Acquired Data\n",
+    "* see what breaks and fix it\n",
+    "\n",
+    "# Wrangle\n",
+    "input: csv or excel from any source\n",
+    "\n",
+    "Clean\n",
+    "* name columns properly\n",
+    "* drop records with no facility id\n",
+    "* remove characters from facility id\n",
+    "* create dr_source via lookup from list of communities\n",
+    "* create dr_asset_id = dr_source_id + dr_facility_id \n",
+    "Condense\n",
+    "* drop outliers (not in expected range)\n",
+    "* drop duplicate records\n",
+    "* drop unused columns\n",
+    "output: csv of cleaned records from any source\n",
+    "\n",
+    "# Merge\n",
+    "Merge clean-dataset with prod-dataset \n",
+    "* add clean-dataset record when clean-dataset.dr_asset_id not in prod-data\n",
+    "* update columns when clean-data column-value is not equal to prod-dataset column-value\n",
+    "* doesn't handle deleted records  \n",
+    "\n",
+    "if clean-dataset.column-value is not in prod-dataset  \n",
+    "\n",
+    "# Where are we going?\n",
+    "We want to replace the xxxx.csv in the github repo with the old and new records. \n",
+    "* create new records\n",
+    "* update old record"
    ]
   },
   {
