--- a/scripts/adopt-a-drain/maintainer/Maintainer.Process.ipynb
+++ b/scripts/adopt-a-drain/maintainer/Maintainer.Process.ipynb
@@ -53,8 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,43 +89,43 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: python-dotenv in /Users/jameswilfong/anaconda/lib/python3.6/site-packages\n",
-      "\u001b[33mYou are using pip version 9.0.1, however version 18.0 is available.\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 19.2.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already satisfied: datadotworld[pandas] in /Users/jameswilfong/anaconda/lib/python3.6/site-packages\n",
-      "Requirement already satisfied: configparser<4.0a,>=3.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: flake8<3.4.1a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: jsontableschema<1.0a,>=0.10.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: certifi>=2017.04.17 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: python-dateutil<3.0a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: click<7.0a,>=6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: requests<3.0a,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: tabulator<=1.4.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: urllib3<2.0a,>=1.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: datapackage<1.0a,>=0.8.8 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: jsontableschema<1.0a,>=0.10.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: click<7.0a,>=6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: six<2.0a,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: flake8<3.4.1a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: configparser<4.0a,>=3.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: python-dateutil<3.0a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: urllib3<2.0a,>=1.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: pandas<1.0a; extra == \"pandas\" in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: mccabe<0.7.0,>=0.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: pyflakes<1.6.0,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: pycodestyle<2.4.0,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: isodate<1.0,>=0.5.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: jsonschema<3.0,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: future<1.0,>=0.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: unicodecsv<1.0,>=0.14 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: rfc3986<1.0,>=0.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from requests<3.0a,>=2.0.0->datadotworld[pandas])\n",
       "Requirement already satisfied: idna<2.7,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from requests<3.0a,>=2.0.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: ijson<3.0,>=2.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: unicodecsv<2.0,>=0.14 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: openpyxl<3.0,>=2.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: jsonlines<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: sqlalchemy<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: xlrd<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: linear-tsv<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
       "Requirement already satisfied: cchardet<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: jsonschema<3.0a,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datapackage<1.0a,>=0.8.8->datadotworld[pandas])\n",
-      "Requirement already satisfied: rfc3986<1.0,>=0.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: future<1.0,>=0.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: isodate<1.0,>=0.5.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: xlrd<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: openpyxl<3.0,>=2.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: sqlalchemy<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: linear-tsv<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: ijson<3.0,>=2.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: jsonlines<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: pycodestyle<2.4.0,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: pyflakes<1.6.0,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: mccabe<0.7.0,>=0.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
       "Requirement already satisfied: pytz>=2011k in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from pandas<1.0a; extra == \"pandas\"->datadotworld[pandas])\n",
       "Requirement already satisfied: numpy>=1.7.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from pandas<1.0a; extra == \"pandas\"->datadotworld[pandas])\n",
       "Requirement already satisfied: jdcal in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from openpyxl<3.0,>=2.4->tabulator<=1.4.1->datadotworld[pandas])\n",
       "Requirement already satisfied: et_xmlfile in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from openpyxl<3.0,>=2.4->tabulator<=1.4.1->datadotworld[pandas])\n",
-      "\u001b[33mYou are using pip version 9.0.1, however version 18.0 is available.\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 19.2.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     },
@@ -139,7 +141,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,25 +176,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Goals\n",
+    "* merge drains from multiple communities across the watershed\n",
+    "* Resolve dataset conflicts i.e., drain identifyer uniqueness, data type, column names, and value range.\n",
+    "\n",
+    "# Acquire the Data\n",
+    "* get a csv or excel file from a community.\n",
+    "\n",
+    "# State of the Acquired-Dataset\n",
+    "    * assume the acquired-dataset is a subset of all drains in the universe ;)\n",
+    "    * assume record identifiers are not unique across communities \n",
+    "    * assume the acquired-dataset's column names are not the same across communities \n",
+    "    * assume the acquired-dataset's data types are not the same across communities\n",
+    "    * assume the acquired-dataset's data-values ranges are not the same across communities\n",
+    "\n",
+    "# Load Acquired Data\n",
+    "* see what breaks and fix it\n",
+    "\n",
+    "# Wrangle\n",
+    "input: csv or excel from any source\n",
+    "\n",
+    "Clean\n",
+    "* name columns properly\n",
+    "* drop records with no facility id\n",
+    "* remove characters from facility id\n",
+    "* create dr_source via lookup from list of communities\n",
+    "* create dr_asset_id = dr_source_id + dr_facility_id \n",
+    "Condense\n",
+    "* drop outliers (not in expected range)\n",
+    "* drop duplicate records\n",
+    "* drop unused columns\n",
+    "output: csv of cleaned records from any source\n",
+    "\n",
+    "# Merge\n",
+    "Merge clean-dataset with prod-dataset \n",
+    "* add clean-dataset record when clean-dataset.dr_asset_id not in prod-data\n",
+    "* update columns when clean-data column-value is not equal to prod-dataset column-value\n",
+    "* doesn't handle deleted records  \n",
+    "\n",
+    "if clean-dataset.column-value is not in prod-dataset  \n",
+    "\n",
+    "# Where are we going?\n",
+    "We want to replace the xxxx.csv in the github repo with the old and new records. \n",
+    "* create new records\n",
+    "* update old record\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "settings\n",
+      "dw_dataset_id  None/grb-storm-drains\n",
       "{'app_name': 'adopt-a-drain',\n",
-      " 'dw_dataset_id': 'wilfongjt/grb-storm-drains',\n",
+      " 'dw_dataset_id': 'None/grb-storm-drains',\n",
       " 'dw_desc': 'Storm Drains of the Grand River Basin, Michigan',\n",
-      " 'dw_table': 'grb_drains',\n",
+      " 'dw_table': 'grb_drains-2019-08-017',\n",
       " 'dw_title': 'GRB Storm Drains',\n",
-      " 'dw_url': 'https://api.data.world/v0/datasets/wilfongjt/grb_drains.csv',\n",
-      " 'files': {'grb_drains.csv': {'url': 'https://raw.githubusercontent.com/citizenlabsgr/data.world/master/clean-data/adopt-a-drain/grb_drains.csv'}},\n",
-      " 'gh_url': 'https://raw.githubusercontent.com/citizenlabsgr/data.world/master/clean-data/adopt-a-drain/grb_drains.csv',\n",
+      " 'dw_url': 'https://api.data.world/v0/datasets/None/grb_drains-2019-08-017.csv',\n",
+      " 'files': {'grb_drains-2019-08-017.csv': {'url': 'https://raw.githubusercontent.com/None/data.world/master/clean-data/adopt-a-drain/grb_drains-2019-08-017.csv'}},\n",
+      " 'gh_url': 'https://raw.githubusercontent.com/None/data.world/master/clean-data/adopt-a-drain/grb_drains-2019-08-017.csv',\n",
       " 'license': 'Public Domain',\n",
-      " 'owner_id': 'wilfongjt',\n",
+      " 'owner_id': None,\n",
       " 'visibility': 'OPEN'}\n"
      ]
     },
@@ -203,7 +258,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,8 +280,8 @@
     "# DW_USER = os.getenv(\"DW_USER\")\n",
     "DW_OWNER=os.getenv(\"DW_OWNER\")\n",
     "DW_TABLE_NAME=maintainer_data['dw_table_name']\n",
-    "DW_DB_URL = \"https://api.data.world/v0/datasets/%s/\".replace(\"%s\", DW_OWNER)\n",
-    "\n",
+    "# DW_DB_URL = \"https://api.data.world/v0/datasets/%s/\".replace(\"%s\", DW_OWNER)\n",
+    "DW_DB_URL = \"https://api.data.world/v0/datasets/{}/\".format(DW_OWNER)\n",
     "# GH_USER=os.getenv(\"GH_USER\")\n",
     "GH_OWNER=os.getenv(\"GH_OWNER\")\n",
     "GH_FILE_NAME=maintainer_data['gh_file_name']\n",
@@ -234,7 +289,10 @@
     "#               https://raw.githubusercontent.com/citizenlabsgr/data.world/master/clean-data/adopt-a-drain/grb_drains.csv\n",
     "\n",
     "\n",
-    "dw_dataset_id = DW_OWNER + \"/\" + maintainer_data['dw_title'].lower().replace('_','-').replace(' ','-')\n",
+    "#dw_dataset_id = DW_OWNER + \"/\" + maintainer_data['dw_title'].lower().replace('_','-').replace(' ','-')\n",
+    "dw_dataset_id = '{}/{}'.format(DW_OWNER, maintainer_data['dw_title'].lower().replace('_','-').replace(' ','-'))\n",
+    "print('dw_dataset_id ', dw_dataset_id)\n",
+    "\n",
     "gh_csv_name = DW_TABLE_NAME\n",
     "gh_csv_name_ext = gh_csv_name + '.' + maintainer_data['gh_file_type']\n",
     "gh_csv_path_name = GH_URL_CLEAN + gh_csv_name_ext\n",
@@ -266,30 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "# Data.World Process\n",
-       "* input: https://raw.githubusercontent.com/citizenlabsgr/data.world/master/clean-data/adopt-a-drain/grb_drains.csv\n",
-       "* drop: wilfongjt/grb-storm-drains\n",
-       "* delay: 6 seconds to delete data\n",
-       "* load: complete\n",
-       "* output: https://api.data.world/v0/datasets/wilfongjt/grb_drains.csv\n",
-       "# OK - Done"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import interface\n",
     "# move data \n",
@@ -334,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
