--- a/scripts/adopt-a-drain/Developer.Process.ipynb
+++ b/scripts/adopt-a-drain/Developer.Process.ipynb
@@ -90,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -425,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
